// Vitest Snapshot v1

exports[`click test > should allow to left click on an element by passing a button type 1`] = `
{
  "actions": [
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "duration": 100,
      "height": 0,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerMove",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "height": 0,
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerDown",
      "width": 0,
    },
    {
      "button": 0,
      "type": "pointerUp",
    },
  ],
  "id": "action1",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to left click on an element by passing a button type 2`] = `
{
  "actions": [
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "duration": 100,
      "height": 0,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerMove",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "height": 0,
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerDown",
      "width": 0,
    },
    {
      "button": 0,
      "type": "pointerUp",
    },
  ],
  "id": "action2",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to left click on an element with an offset without passing a button type 1`] = `
[
  {
    "actions": [
      {
        "altitudeAngle": 0,
        "azimuthAngle": 0,
        "button": 0,
        "duration": 100,
        "height": 0,
        "origin": {
          "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
        },
        "pressure": 0,
        "tangentialPressure": 0,
        "tiltX": 0,
        "tiltY": 0,
        "twist": 0,
        "type": "pointerMove",
        "width": 0,
        "x": 0,
        "y": 30,
      },
      {
        "altitudeAngle": 0,
        "azimuthAngle": 0,
        "button": 0,
        "height": 0,
        "pressure": 0,
        "tangentialPressure": 0,
        "tiltX": 0,
        "tiltY": 0,
        "twist": 0,
        "type": "pointerDown",
        "width": 0,
      },
      {
        "button": 0,
        "type": "pointerUp",
      },
    ],
    "id": "action7",
    "parameters": {
      "pointerType": "mouse",
    },
    "type": "pointer",
  },
]
`;

exports[`click test > should allow to middle click on an element 1`] = `
{
  "actions": [
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "duration": 100,
      "height": 0,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerMove",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 1,
      "height": 0,
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerDown",
      "width": 0,
    },
    {
      "button": 1,
      "type": "pointerUp",
    },
  ],
  "id": "action5",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to middle click on an element 2`] = `
{
  "actions": [
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "duration": 100,
      "height": 0,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerMove",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 1,
      "height": 0,
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerDown",
      "width": 0,
    },
    {
      "button": 1,
      "type": "pointerUp",
    },
  ],
  "id": "action6",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to right click on an element 1`] = `
{
  "actions": [
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "duration": 100,
      "height": 0,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerMove",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 2,
      "height": 0,
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerDown",
      "width": 0,
    },
    {
      "button": 2,
      "type": "pointerUp",
    },
  ],
  "id": "action3",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to right click on an element 2`] = `
{
  "actions": [
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 0,
      "duration": 100,
      "height": 0,
      "origin": {
        "element-6066-11e4-a52e-4f735466cecf": "some-elem-123",
      },
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerMove",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    {
      "altitudeAngle": 0,
      "azimuthAngle": 0,
      "button": 2,
      "height": 0,
      "pressure": 0,
      "tangentialPressure": 0,
      "tiltX": 0,
      "tiltY": 0,
      "twist": 0,
      "type": "pointerDown",
      "width": 0,
    },
    {
      "button": 2,
      "type": "pointerUp",
    },
  ],
  "id": "action4",
  "parameters": {
    "pointerType": "mouse",
  },
  "type": "pointer",
}
`;

exports[`click test > should allow to right click on an element with an offset and passing a button type 1`] = `
{
  "altitudeAngle": 0,
  "azimuthAngle": 0,
  "button": 2,
  "height": 0,
  "pressure": 0,
  "tangentialPressure": 0,
  "tiltX": 0,
  "tiltY": 0,
  "twist": 0,
  "type": "pointerDown",
  "width": 0,
}
`;
